# messagedisk

./: .gitignore  README.md
blockmerchant/: Makefile  README.md
blockmerchant/src/: main.c
chunkjuggler/: Cargo.toml  README.md
chunkjuggler/src/: fd.rs  handlers.rs  main.rs  message.rs  ring.rs
